data/derived/comb/progs/unify/prog1296.ml.out
Characters 27-40:
  let stringOfList f l = "["^sepConcat ";"^[List.map(f l)]^"]";;
                             ^^^^^^^^^^^^^
Error: This expression has type string list -> string
       but an expression was expected of type string
